--- a/src/pages/bcp/covid-19/index.hbs
+++ b/src/pages/bcp/covid-19/index.hbs
@@ -27,7 +27,7 @@ location: bcp
       <h2 class="h2">During the COVID-19 pandemic, services for those at risk of, or escaping homelessness have had to be adapted.</h2>
       <ol>
         <li>
-          If you are concerned about a rough sleeper then please alert the Street Outreach Services team by emailing <a href="mailto:bcpsos@mungos.org">bcpsos@mungos.org</a> or call Streetlink on <a href="tel:03005000914">0300 500 0914</a>.
+          If you are concerned about a rough sleeper then please alert the Street Outreach Services team by emailing <a href="mailto:bcpsos@mungos.org">bcpsos@mungos.org</a>.
         </li>
         <li>
           Click <a href="https://docs.google.com/spreadsheets/d/1zKOHwbIuU5vX2tYSmlHJv7xgGAAuNJQ17Fr3ya6twMQ/edit?usp=sharing">here</a> to access a full list of the current community support services that are available (including meals, health support, and training/employability).
